Bug #29772  Error compiling with option --without-geometry

Added #ifdef HAVE_SPATIAL around geometry related code.